# vuetify-stack-board

./: .gitignore  MANIFEST.in  README.md  noxfile.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: docker-image.yaml
doc/: ChangeLog.md
etc/: skylight-sample.toml  skylight.service  skylight.toml  vstackboard-sample.conf  vstackboard.conf  vstackboard.service
forward/: README.md  package-lock.json  package.json  vue.config.js
forward/public/: config.json  dashboard.html  welcome.html
forward/src/assets/: dialogs.js  message.js  tables.js
forward/src/components/: ErrorPage.vue
forward/src/plugins/: vuetify.js
i18n/: en_US.po  zh_CN.po
install/: Dockerfile  build.py  build.sh  install.sh  pip.conf  vstackboard.service
skylight/: hooks.py  main.py  views.py
skylight-web/: index.html  package.json  vite.config.js
skylight-web/public/: config.json
skylight-web/src/: main.js
skylight-web/src/components/: ErrorPage.vue  (+1 more)
skylight/common/: conf.py  constants.py  context.py  dbconf.py  exceptions.py  i18n.py  log.py  token.py  utils.py
skylight/db/: api.py
skylight/openstack/: proxy.py  v3_auth.py
tests/units/: test_server.py
vstackboard/: hooks.py  server.py  views.py
vstackboard/cmd/: daemon.py  vsb.py
vstackboard/common/: conf.py  config.py  constants.py  context.py  dbconf.py  exceptions.py  i18n.py  utils.py
vstackboard/db/: api.py  models.py
vstackboard/openstack/: proxy.py
vstackboard/static/: dashboard.js  i18n.js  welcome.js
vstackboard/templates/: dashboard.html  requires.html  welcome.html
(+375 files in other folders)
