[metadata]
name = vstackboard
summary = Vuetify Openstack Dashboard
author = fjboy
author_email = 2535463841@qq.com
home_page = https://github.com/fjboy/vuetify-stack-board

[global]
setup-hooks =
    vstackboard.hooks.setup_hook

[files]
packages = vstackboard
data_files =
    /etc/vstackboard = etc/vstackboard-sample.conf
    /usr/lib/systemd/system = etc/vstackboard.service

[entry_points]
console_scripts =
    vstackboard = vstackboard.cmd.vsb:main
