[metadata]
name = skylight
summary = OpenStack Dashboard
author = BytemanD
author_email = byteman.e@outlook.com
home_page = https://github.com/BytemanD/vuetify-stack-board

[global]
setup-hooks =
    skylight.hooks.setup_hook

[files]
packages =
    skylight

data_files =
    /etc/vstackboard = etc/skylight-sample.conf
    /usr/lib/systemd/system = etc/skylight.service

[entry_points]
console_scripts =
    skylight = skylight.main:main
